--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,15 +7,26 @@
   "overrides": [
     {
       "extends": ["xo-typescript", "prettier"],
-      "files": ["*.ts", "*.tsx"],
+      "files": "*.ts",
       "rules": {
+        "no-unused-vars": "error",
+        "no-console": "error",
         "@typescript-eslint/consistent-type-definitions": [
           "error",
           "interface"
         ],
-        "no-unused-vars": "error",
-        "no-console": "error",
-        "no-new": 0
+        "new-cap": [
+          "error",
+          {
+            "capIsNewExceptions": ["Router"]
+          }
+        ]
+      }
+    },
+    {
+      "files": ["src/**/models/*.ts"],
+      "rules": {
+        "@typescript-eslint/naming-convention": "off"
       }
     }
   ],
