--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node dist",
-    "start:dev": "node --watch dist",
+    "start": "node dist/",
+    "start:dev": "node --watch dist/",
     "build": "tsc",
     "build:dev": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,8 +18,11 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
     "@commitlint/config-conventional": "^17.6.3",
+    "@types/debug": "^4.1.7",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
+    "@types/node": "^20.2.1",
+    "@types/nodemon": "^1.19.2",
     "@types/prettier": "^2.7.2",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
@@ -31,9 +34,13 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "debug": "^4.3.4",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "lint-staged": "^13.2.2",
+    "mongoose": "^7.2.0",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.8"
   }
 }
