--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
     "@commitlint/config-conventional": "^17.6.3",
+    "@types/bcryptjs": "^2.4.2",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.2.1",
     "@types/nodemon": "^1.19.2",
@@ -34,9 +36,11 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "lint-staged": "^13.2.2",
     "mongoose": "^7.2.0",
     "morgan": "^1.10.0",
